# dxy_infer

./: CMakeLists.txt  readme.md  ubuntu24.04_install.md
inc/: OpencvHead.hpp  camera.hpp  can_send.hpp  cpm.hpp  detect.hpp  filter.hpp  infer.hpp  main.hpp  pthread.hpp  queue.hpp  realsense.hpp  tcp.hpp  uart.hpp  yolo.hpp
src/: camera.cpp  can_send.cpp  detect.cpp  filter.cpp  main.cpp  pthread.cpp  queue.cpp  realsense.cpp  tcp.cpp  uart.cpp
src/kernels/: CMakeLists.txt  infer.cu  yolo.cu
workspace/: pro
yolov8/: detect.py  export.py  start.py  startup.sh  train.py
